turmas,prof,alunos ok

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,4 +19,14 @@
                 <li><a href="{{ url_for('alunos.mostrar_formulario_aluno') }}">Adicionar novo aluno</a></li>
                 <li><a href="{{ url_for('alunos.listar_alunos_view') }}">Quadro de alunos</a></li>
             </ul>
+            <h2>Professores</h2>
+            <ul>
+                <li><a href="{{ url_for('professores.adicionar_professor_page') }}">Adicionar professores</a></li>
+                <li><a href="{{ url_for('professores.lista_professores') }}">Quadro de professores</a></li>
+            </ul>
+            <h2>Turma</h2>
+            <ul>
+                <li><a href="{{ url_for('alunos.mostrar_formulario_aluno') }}">Adicionar novo aluno</a></li>
+                <li><a href="{{ url_for('alunos.listar_alunos_view') }}">Quadro de alunos</a></li>
+            </ul>
         </section>
