--- a/templates/update_aluno.html
+++ b/templates/update_aluno.html
@@ -16,7 +16,7 @@
       <input type="text" id="nome" name="nome" value="{{ aluno.nome }}"><br>
       
       <label for="data_nascimento">Data de nascimento:</label>
-      <input type="date" id="idade" name="data_nascimento" value="{{ aluno.data_nascimento }}"><br>
+      <input type="date" id="idade" name="data_nascimento" value="{{ aluno.idade }}"><br>
 
       <label for="turma_id">Turma</label>
       <input type="text" id="turma_id" name="turma_id" value="{{ aluno.turma_id }}"><br>
